--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo23.png" type="image/x-icon">
   <meta name="description" content="Web Builder Description">
-  <title>Page 6</title>
+  <title>FarmsNtech/title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
