--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-2" href="https://mobirise.com">FarmsNtech</a>
+                    <a class="navbar-caption text-white display-2" href="">FarmsNtech</a>
                 </span>
             </div>
         </div>
@@ -85,7 +85,7 @@
     
     <figure class="mbr-figure align-center container" id="video">
         <div class="video-block" style="width: 66%;">
-            <div><iframe width="560" height="400" src="https://www.youtube.com/embed/amnfXzeDb5M" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe width="540" height="400" src="https://www.youtube.com/embed/amnfXzeDb5M" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
