--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap">
-                   <link rel="shortcut icon" href="http://www.iiitdmj.ac.in/img/favicon.ico" type="image/x-icon">
-                    <a class="navbar-caption text-white display-2" href="">FarmsNtech</a>
+                  
+                   <a class="navbar-caption text-white display-4" href="http://www.iiitdmj.ac.in/img/favicon.ico">
+                        FarmsNtech
+                    </a>
                 </span>
             </div>
         </div>
