--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="media-container-column mbr-white col-md-10 offset-md-1">
             <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">FarmsNtech</h1>
-            <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">we predict you grow</h3>
+            <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5" style="color:#64dd17"><b>We predict , You grow</b></h3>
             
             
         </div>
