--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap">
-                  
-                   <a class="navbar-caption text-white display-4" href="http://www.iiitdmj.ac.in/img/favicon.ico">
+                  <img src="http://www.iiitdmj.ac.in/img/favicon.ico"></img>
+                   <a class="navbar-caption text-white display-4">
                         FarmsNtech
                     </a>
                 </span>
