--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap">
-                  <img src="http://www.iiitdmj.ac.in/img/favicon.ico"></img>
+                  <img src="http://www.iiitdmj.ac.in/img/favicon.ico" style="height:20px;width:20px;"></img>
                    <a class="navbar-caption text-white display-4">
                         FarmsNtech
                     </a>
